# tasks_parser

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/src/: config.py  constants.py  db.py  models.py
app/src/api/: connector_api.py
app/src/queries/: core.py  create_tables.py  get_tasks_set.py  insert_to_db.py
